style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
}

:root {
    --grey-color: #b1adad;
    --border-color: #e7e8ea;
}

.container {
    display: flex;
    height: 100vh;
    letter-spacing: 1px;
}


/*----- Dark Mode -----*/

.dark-mode {
    background-color: #000;
    color: #fff;
}


/*----- Left SideBar -----*/

.left_sidebar {
    flex-basis: 18%;
    position: sticky;
    top: 0px;
    align-self: flex-start;
    transition: all .3s ease-in-out;
}

.left_sidebar .close_hamburger_btn {
    position: absolute;
    top: 30px;
    left: 30px;
    font-size: 40px;
    cursor: pointer;
    display: none;
}

.left_sidebar .logo h2 {
    padding: 20px 30px;
    font-weight: 600;
    font-size: 32px;
    font-style: italic;
}

.left_sidebar .menu_items .menu_item {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 17px;
    color: var(--grey-color);
    padding: 20px 30px;
    cursor: pointer;
}


/*----- Main Content -----*/

.main_content {
    flex-basis: 62%;
    display: flex;
    flex-direction: column;
    gap: 30px;
    padding: 0 20px;
    transition: all .3s ease-in-out;
}

.main_content .main_navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.main_content .main_navbar .dark_mode_icon i {
    background: var(--border-color);
    color: #000;
    font-size: 18px;
    padding: 10px;
    margin-top: 15px;
    border-radius: 50%;
    cursor: pointer;
}

.main_content .main_navbar .dark_mode_icon .bx-sun {
    display: none;
}

.main_content .left_right_sidebar_opener {
    font-size: 45px;
    cursor: pointer;
    margin-top: 20px;
    display: none;
}

.main_content .left_right_sidebar_opener .student {
    display: flex;
    align-items: center;
    gap: 10px;
}

.main_content .left_right_sidebar_opener .student img {
    height: 50px;
    width: 50px;
    border-radius: 50%;
    object-fit: cover;
    background-position: center;
    margin-top: 15px;
}

.main_content .left_right_sidebar_opener .student p {
    font-size: 18px;
}

.search_box {
    background: var(--border-color);
    display: flex;
    gap: 15px;
    padding: 12px;
    margin-top: 20px;
    align-items: center;
    color: #000;
    width: 100%;
    border-radius: 5px;
    font-size: 20px;
    width: 90%;
}

.search_box input {
    width: 100%;
    border: none;
    background: #e9eaec;
    outline: none;
}

.menu_item_name_and_filter {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 4px 0;
}

.menu_item_name_and_filter .menu_item_name h2 {
    font-weight: 600;
    font-size: 24px;
}

.menu_item_name_and_filter .filter_and_sort {
    display: flex;
    gap: 20px;
    align-items: center;
}

.menu_item_name_and_filter .filter_and_sort .sort_and_filter {
    display: flex;
    align-items: center;
    gap: 10px;
    background: var(--border-color);
    color: #000;
    padding: 5px 10px;
    border-radius: 5px;
    font-size: 14px;
    cursor: pointer;
}

.tabs {
    display: flex;
    justify-content: space-between;
    font-size: 16px;
    margin-left: 15px;
}

.tabs .tab_name {
    display: flex;
    gap: 50px;
    width: 100%;
    border-bottom: 2px solid var(--border-color);
    padding-bottom: 15px;
    cursor: pointer;
    position: relative;
}

.tabs .tab_name p {
    margin-left: 12px;
}

.tabs .tab_name::after {
    content: "";
    position: absolute;
    bottom: -2px;
    left: 0;
    width: 12%;
    height: 2px;
    background-color: #808080;
}

.main_content .table {
    overflow-x: auto;
}

.main_content table {
    border-collapse: collapse;
    width: 100%;
}

.table td,
.table th {
    padding: 25px 20px;
    text-align: left;
    font-size: 14px;
    cursor: pointer;
}

.table tr:nth-child(even) {
    background: #f1f8f8;
}

.table tr:nth-child(4) {
    background: #5bb9c0;
    color: #fff;
}

.table img {
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

.table .profile_name {
    display: flex;
    align-items: center;
    gap: 7px;
}


/*----- Right SideBar -----*/

.right_sidebar {
    flex-basis: 20%;
    position: sticky;
    top: 0px;
    align-self: flex-start;
    transition: all 0.3s ease-in-out;
}

.notification_and_name {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    margin-top: 20px;
    padding-bottom: 35px;
    border-bottom: 2px solid var(--border-color);
    cursor: pointer;
    position: relative;
}

.notification_and_name .close_btn {
    position: absolute;
    right: 30px;
    font-size: 26px;
    display: none;
}

.notification_and_name img {
    width: 35px;
    height: 35px;
    border-radius: 50%;
    background-position: center;
    object-fit: cover;
    margin-right: -20px;
}

.notification_and_name .bell {
    position: relative;
    font-size: 20px;
}

.notification_and_name span {
    position: absolute;
    background: #ff0000;
    height: 5px;
    width: 5px;
    right: 0px;
    top: 2px;
    border-radius: 50%;
}

.profile {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
    gap: 15px;
}

.profile img {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    object-fit: cover;
    background-position: center;
}

.profile .name_and_class {
    text-align: center;
}

.profile .name_and_class P {
    font-weight: 600;
}

.profile .name_and_class span {
    font-size: 14px;
    color: var(--grey-color);
}

.profile .contact_info {
    display: flex;
    gap: 30px;
    font-size: 22px;
    cursor: pointer;
}

.profile .about {
    margin: 15px 0;
}

.profile .about h4,
.profile .other_info h4 {
    font-weight: 600;
    font-size: 14px;
}
/* ... */

